clusters/wrtk8s/ollama/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: ollama
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ollama.jgarr.net
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - ollama.jgarr.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 80
